@@ -858,97 +858,6 @@ octalEscape (const char **str)
 
 */
 
-#if 0
-int
-copyStr (char *dest, const char *src)
-{
-  char *OriginalDest = dest;
-
-  while (*src)
-    {
-      if (*src == '\"')
-        ++src;
-      else if (*src == '\\')
-        {
-          ++src;
-          switch (*src)
-            {
-            case 'n':
-              *dest++ = '\n';
-              break;
-            case 't':
-              *dest++ = '\t';
-              break;
-            case 'v':
-              *dest++ = '\v';
-              break;
-            case 'b':
-              *dest++ = '\b';
-              break;
-            case 'r':
-              *dest++ = '\r';
-              break;
-            case 'f':
-              *dest++ = '\f';
-              break;
-            case 'a':
-              *dest++ = '\a';
-              break;
-
-            case '0':
-            case '1':
-            case '2':
-            case '3':
-            case '4':
-            case '5':
-            case '6':
-            case '7':
-              *dest++ = octalEscape (&src);
-              --src;
-              break;
-
-            case 'x':
-              *dest++ = hexEscape (&src);
-              --src;
-              break;
-
-            case 'u':
-              *dest++ = universalEscape (&src, 4);
-              --src;
-              break;
-
-            case 'U':
-              *dest++ = universalEscape (&src, 8);
-              --src;
-              break;
-
-            case '\\':
-              *dest++ = '\\';
-              break;
-            case '\?':
-              *dest++ = '\?';
-              break;
-            case '\'':
-              *dest++ = '\'';
-              break;
-            case '\"':
-              *dest++ = '\"';
-              break;
-            default:
-              *dest++ = *src;
-            }
-          ++src;
-        }
-      else
-        *dest++ = *src++;
-    }
-
-  *dest++ = '\0';
-
-  return dest - OriginalDest;
-}
-#endif
-
 const char *
 copyStr (const char *src, size_t *size)
 {
